--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
     flex-direction: column;
     justify-content: center;
     padding: 20px;
-    color: #fff;
+    color: #5e5e5e;
     transition: 2s;
 }
 
